<resources>
    <string name="app_name">Авто ангел</string>
    <string name="get">Получить</string>
    <string name="input_code">Ваш код</string>
    <string name="input_code_message">Нужно ввести полученный код</string>
    <string name="fmt_login_description_select_phone">Ввести номер телефона</string>
    <string name="ac_select_beacon_Description">Ввести номер телефона</string>
    <string name="fmt_login_input_phone">Введите номер</string>
    <string name="fmt_get_code_description">Мы выслали код подтверждения на ваш номер</string>
    <string name="fmt_login_description">Для работы приложения необходимо наличе GPS/GSM - маяка, позволяющего поддерживать связь между вашим автомобилем и смартфоном.</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_number_input">Введите номер телефона</string>
    <string name="enter">Войти</string>
    <string name="repeated">Повторный запрос кода через</string>
    <string name="ok">Ok</string>
    <string name="shop_header">Вы можете приобрести необходимое оборудование в нашем онлайн-магазине</string>
    <string name="got_to_shop">Перейти в магазин</string>
    <string name="add_car">Добавить автомобиль</string>
    <string name="buy_beacon">Покупка маяка</string>
    <string name="garage">Мой гараж</string>
    <string name="cant_load_data">Не удалось загрузить данные</string>
    <string name="need_input_code">Нужно ввести код!</string>
    <string name="add_car_to_garage">Добавить автомобиль в базу приложения</string>
    <string name="car_title">Название автомобиля</string>
    <string name="phone">Номер sim карты в маяке</string>
    <string name="add">Добавить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="input">Ввести</string>
    <string name="want_exit">Выйти из профиля?</string>
    <string name="token_bad">Не дейсвительный ключ, нужно переавторизоваться.</string>
    <string name="exit">Выйти</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="next">Продолжить</string>
    <string name="i_have_beacon">У уже меня есть маяк</string>
    <string name="i_have_not_beacon">У меня нет маяка</string>
    <string name="can_not_find_beacon">Не нашли свою модель в списке?</string>
    <string name="notifications">Оповещения</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="delete_confirm">Удалить машину?</string>
    <string name="save_confirm">Сохранить изменения?</string>
    <string name="edit">Редактирование</string>
    <string name="record_log">Журнал передвижений</string>
    <string name="no_cars_in_garage">Нет машин в гараже</string>
    <string name="security_on">Защита</string>
    <string name="configuration_changed">Настройки изменились</string>
    <string name="need_fill_fields">Заполните поля</string>
    <string name="car_exists">Машина с таким названием уже существует</string>
    <string name="create_car_success">Машина добавлена в базу</string>
    <string name="record">Запись</string>
    <string name="log">Журнал</string>
    <string name="location_not_found">Местоположение не определено</string>
    <string name="distance_not_found">Раcстояние не определено</string>
    <string name="cannot_send_code">Не удалось отправить сообщение</string>
    <string name="error_autorization">Ошибка авторизации</string>
    <string name="code_must_be_correct">Код должен состоять из 4 символов</string>
    <string name="beacon_type">Тип GPS-маяка</string>
    <string name="cant_final_execute">Не удалось завершить операцию, пожалуйста повторите</string>
    <string name="enr_route">Конец маршрута</string>
    <string name="about">О программе</string>
    <string name="warning">Внимание</string>
    <string name="imei">IMEI GPS-маяка</string>
    <string name="input_car_title">Введите название машины</string>
    <string name="input_imei">Введите imei GPC-маяка</string>
    <string name="input_phone">Введите номер сим-карты в маяке</string>
    <string name="enter_to_application">Войти в приложение</string>
    <string name="about_application">Приложение поможет уберечь ваш автомобиль от угона, благодаря отслеживанию его местоположения через GPS маяк.</string>
    <string name="sms_limit">Превышен лимит отправки смс. 5 в день</string>
    <string name="empty_recods">Нет записей в журнале</string>
    <string name="imei_exists">Маяк с таким imei уже существует в базе</string>
    <string name="phone_exists">К такому номеру sim карты уже привязан маяк</string>
</resources>
