<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fmt_map_mv_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:layout_marginBottom="200dp"
        android:clickable="true"
        map:uiCompass="true"
        map:uiZoomControls="true"
        map:zOrderOnTop="true" />

    <Button
        android:id="@+id/fmt_map_btn_record"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/selector_green_button"
        android:drawableLeft="@drawable/ic_camera"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:text="@string/record"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/grideperlevy"
        android:textSize="15sp" />

    <Button
        android:id="@+id/fmt_map_btn_log"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_marengo_button"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/log"
        android:textAllCaps="false"
        android:textColor="@color/grideperlevy"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/fmt_map_tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/location_not_found"
        android:textColor="@color/slate_gray"
        android:textSize="19sp"
        android:layout_above="@+id/fmt_map_btn_record"
        android:layout_alignLeft="@+id/fmt_map_btn_record"
        android:layout_alignStart="@+id/fmt_map_btn_record"
        android:layout_marginBottom="100dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/distance_not_found"
        android:textColor="@color/silver_gray"
        android:textSize="17sp"
        android:layout_above="@+id/fmt_map_btn_record"
        android:layout_alignLeft="@+id/fmt_map_btn_record"
        android:layout_alignStart="@+id/fmt_map_btn_record"
        android:layout_marginBottom="70dp"/>
</RelativeLayout>