<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grideperlevy"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ac_edit_avto_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorAccent" />

    <TextView
        android:id="@+id/ac_edit_avto_tv_notifications"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ac_edit_avto_toolbar"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/ac_edit_avto_swt_notifications"
        android:layout_toStartOf="@+id/ac_edit_avto_swt_notifications"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="20dp"
        android:text="@string/notifications"
        android:textColor="@color/slate_gray"
        android:textSize="19sp" />

    <com.rey.material.widget.Switch
        android:id="@+id/ac_edit_avto_swt_notifications"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ac_edit_avto_tv_notifications"
        android:background="@color/white"
        android:gravity="center"
        android:padding="20dp"
        app:sw_trackColor="@color/green_jungle_krayola" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ac_edit_avto_til_car_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ac_edit_avto_swt_notifications"
        android:layout_alignRight="@+id/ac_edit_avto_swt_notifications"
        android:layout_below="@+id/ac_edit_avto_tv_notifications"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingTop="15dp"
        android:theme="@style/CarCreateEditText">

        <EditText
            android:id="@+id/ac_edit_avto_et_car_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:fontFamily="sans-serif-light"
            android:hint="@string/car_title"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/slate_gray"
            android:textSize="19sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ac_edit_avto_til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ac_edit_avto_til_car_title"
        android:layout_alignRight="@+id/ac_edit_avto_til_car_title"
        android:layout_below="@+id/ac_edit_avto_til_car_title"
        android:background="@color/white"
        android:paddingBottom="20dp"
        android:paddingTop="15dp"
        android:theme="@style/CarCreateEditText">

        <EditText
            android:id="@+id/ac_edit_avto_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:fontFamily="sans-serif-light"
            android:hint="@string/phone"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:padding="20dp"
            android:textColor="@color/slate_gray"
            android:textSize="19sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/selector_marron_button"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/grideperlevy"
        android:textSize="15sp" />

    <Button
        android:id="@+id/ac_edit_avto_btn_save"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_green_button"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/grideperlevy"
        android:textSize="15sp" />
</RelativeLayout>