<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="23dp"
    android:paddingRight="23dp">

    <TextView
        android:id="@+id/fmt_login_im_livering"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/fmt_login_et_code"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_alignEnd="@+id/fmt_login_im_livering"
        android:layout_alignRight="@+id/fmt_login_im_livering"
        android:layout_below="@+id/fmt_login_im_livering"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="17dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="15dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/input_code"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textSize="19sp" />

    <Button
        android:id="@+id/fmt_login_btn_get_code"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fmt_login_im_livering"
        android:layout_alignStart="@+id/fmt_login_im_livering"
        android:layout_below="@+id/fmt_login_im_livering"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/selector_marengo_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/get"
        android:textAllCaps="false"
        android:textColor="@color/grideperlevy"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/fmt_login_tv_description"
        style="@style/AcLoginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fmt_login_et_code"
        android:layout_marginTop="15dp"
        android:textColor="@color/slate_gray" />

    <TextView
        android:id="@+id/fmt_login_tv_repeated_response"
        style="@style/AcLoginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fmt_login_tv_description"
        android:layout_marginTop="15dp"
        android:textColor="@color/slate_gray" />

    <Button
        android:id="@+id/fmt_login_btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_green_disabled"
        android:editable="false"
        android:fontFamily="sans-serif-light"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textColor="@color/grideperlevy"
        android:textSize="17sp" />
</RelativeLayout>