<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grideperlevy">

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:text="@string/add_car_to_garage"
        android:textColor="@color/slate_gray"
        android:fontFamily="sans-serif"
        android:textSize="19sp"
        android:id="@+id/textView" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fmt_create_il_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:theme="@style/CarCreateEditText"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/fmt_create_et_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/slate_gray"
            android:background="@drawable/edit_text_background"
            android:hint="@string/car_title"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fmt_create_il_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:theme="@style/CarCreateEditText"
        android:layout_below="@+id/fmt_create_il_car"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/fmt_create_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/slate_gray"
            android:background="@drawable/edit_text_background"
            android:hint="@string/phone"
            android:layout_below="@+id/fmt_create_et_car"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fmt_create_btn_create_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_get_code"
        android:gravity="center"
        android:text="@string/create"
        android:textColor="@color/grideperlevy"
        android:fontFamily="sans-serif-light"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>